     - Make SIMIX_sem_block_onto() user-visible
  * Refactoring context stuff:
    - Use pseudo-OOP for better modularity
    - reimplement SIMIX_process_kill() without process_schedule() so
      that the latter can take as invariant that it is called from
      maestro.
    - Merge context_start into context_new for sake of simplicity
 SURF:
  * Rename configuration variables to start a hierarchy:
    o cpu_model -> cpu/model
    o network_model -> network/model
    o workstation_model -> workstation/model
  * New configuration variables:
    o network/bandwidth_factor: correction to bandwith
    o network/latency_factor: correction to latency
    o netwotk/weight_S: correction to the weight of competing streams
  * Add a long description to the models, that users can see with such
    argument on the command line: --cfg=cpu/model:help
  * --help-models display the long description of all known models
 XBT:
  * config: add the ability to set a default value after registration
    Does not override any previously set value (e.g. from cmd line)
  * dict: allow to have integer key and data.
    When so, you need to use the following functions
     void xbt_dicti_set(xbt_dict_t dict, uintptr_t key, uintptr_t data);
     uintptr_t xbt_dicti_get(xbt_dict_t dict, uintptr_t key);
     void xbt_dicti_remove(xbt_dict_t dict, uintptr_t key);
    In contrary to regular dicts, the key is not malloced before copy.
    Mixing scalar and regular elements in the same dict is not tested 
      (but may work).
  * Allow to use xbt_dynar_shrink() to expend the dynar instead
 Tracing for Visualization:
  * SimGrid is now instrumented in order to generate a trace file for
    visualization analysis: to use it, need to compile SimGrid with the
    "tracing" option enabled, and instrument the program using SimGrid with
    TRACE_start, TRACE_category, TRACE_msg_set_task_category and TRACE_end
    (among other functions).